(All changes in 1.53 - 1.8.2 were made by IgorTheLight, excluding patch 1.6.1)

## Version 1.8.2:

- Renamed "rl_sso_num_times_shown" to "Login Attempts" for more clarity
- Removed "Force Watch Movies" setting because it's effect was not proved. "-nomovies" is working as usual
- Optimization: changed Regex to String.Contains() in IsModRequired() method - it's 170x faster! 34 ms vs 0.2 ms
- Optimization: changed Regex to String.Contains() in GetModFoldersFromFile() method - it's 34x faster! 34 ms vs 1 ms
- Optimization: changed Regex to String.Contains() in ModIsPlayable() method - it's 10x faster now! 3 ms vs 32 ms
- Optimization: changed Directory.GetFiles() to File.Exists() in GetCurrentGameEXE() method - it's 1.45x faster now!
- Optimization: changed Directory.GetFiles() to File.Exists() in CheckForGraphicsConfigEXE() method - it's 1.45x faster now!
- Optimization: refactored StartGameWithOptions() method - it's 1.14x faster 
- Optimization: refactored GetMods() method - it's more readable and around 2% faster
- Optimization: There is no more Regex object calls in ModManager Form - it uses 35% less RAM now. 11 300 Kb vs 8 388 Kb (in my case)
- Some small tweaks here and there

## Version 1.8.1:

- Executable size was optimized. It's 2.4 times smaller than before (1 038 Kb instead of 2 487 Kb)!
- Many code tweaks and some optimizations
- Added Disclaimer to the end of README.MD

## Version 1.8.0:

- Added new form - Settings Manager. It could change game settings (including hidden ones!)
- CornCobMan's Fun Mod for Soulstorm link was updated from 1.86.2 to 1.87
- Added 3 more mods to download (Space Wolves, Space Wolves - Thirteenth Company and Men of Praetoria)
- Some small code tweaks

## Version 1.7.0:

- Added new form - Mod Downloader. It could download most popular mods using your default web browser
- Some code improvements

## Version 1.6.1:

- Improved the usability of the Mod Merger.